workshop3/bggapp.v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-bggapp-v2
  labels:
    name: deploy-bggapp-v2
    env: dev
spec:
  replicas: 3
  selector: 
    matchLabels:
      name: pod-bggapp-v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0 
  template:
    metadata:
      name: pod-bggapp-v2
      labels:
        name: pod-bggapp-v2
        env: dev
    spec:
      containers:
        - name: container-bggapp-v2
          image: stackupiss/bgg-backend:v2
          imagePullPolicy: IfNotPresent
          args:
            - --prefix
            - /v2
          ports:
            - name: port-bggapp-v2
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-bggapp-v2
  labels:
    name: svc-bggapp-v2
    env: dev
spec:
  type: ClusterIP
  selector:
    name: pod-bggapp-v2
  ports:
    - name: ext-port-bggapp
      port: 8080
      targetPort: port-bggapp-v2
