workshop3/bggdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-bggdb
  labels:
    name: deploy-bggdb
    env: dev
spec:
  replicas: 1
  selector: 
    matchLabels:
      name: pod-bggdb
  template:
    metadata:
      name: pod-bggdb
      labels:
        name: pod-bggdb
        env: dev
    spec:
      volumes:
        - name: vol-bggdb
          persistentVolumeClaim:
            claimName: pvc-bggdb
      containers:
        - name: container-bggdb
          image: stackupiss/bgg-database:v1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: vol-bggdb
              mountPath: /var/lib/mysql
          ports:
            - name: port-bggdb
              containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: svc-bggdb
  labels:
    name: svc-bggdb
    env: dev
spec:
  type: ClusterIP
  selector:
    name: pod-bggdb
  ports:
    - port: 3306
      targetPort: port-bggdb
