workshop3/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-bgg
  labels:
    name: ing-bgg
    env: dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/v1"
            backend:
              service:
                name: svc-bggapp-v1
                port: 
                  name: ext-port-bggapp
          - pathType: Prefix
            path: "/v2"
            backend:
              service:
                name: svc-bggapp-v2
                port: 
                  name: ext-port-bggapp
